2022-04-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCast.c:
	  Fix array-to-pointer decay in _Generic.

2022-04-15 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCsymt.c,
	  support/regression/tests/bug-2629.c:
	  Fix bug #2629.

2022-04-15 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCsymt.c:
	  Assertion to catch bug #2629 earlier.
	* support/regression/tests/bug-2629.c:
	  (Disabled) test for bug #2629.

2022-04-15 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCsymt.c:
	  Fix printing of plain char for error messages and debug output.

2022-04-13 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* doc/sdccman.lyx:
	  Update documentation on standard compliance.

2022-04-11 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/stm8/gen.c,
	  support/regression/tests/bug-3379.c:
	  Fix bug #3379.

2022-04-10 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/bug-2981.c:
	  Test for bug #2981.
	* src/SDCCast.c,
	  support/regression/tests/bug-3255.c:
	  Fix bug #3255.
	* src/SDCCglue.c,
	  support/valdiag/tests/generic.c:
	  Fix part of bug #3145.

2022-04-03 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/Makefile.in,
	  support/regression/ports/mcs51-small-stack-auto:
	  Rename mcs51-stack-auto to mcs51-small-stack-auto for consistency with mcs51-small and mcs51-large-stack-auto.
	* doc/sdccman.lyx:
	  Clarify __z88dk_callee behaviour.

2022-04-03 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/mcs51/gen.c,
	  src/stm8/gen.c,
	  support/regression/tests/funptrsstructreturn.c.in:
	  Fixes for calls via function pointers to functions returning struct / union.

2022-04-03 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCicode.c,
	  src/SDCCsymt.c,
	  src/mcs51/gen.c,
	  src/mcs51/main.c,