@@ -1,3 +1,9 @@
+2022-04-20 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* src/SDCCglue.c,
+	  support/valdiag/tests/generic.c:
+	  Fix another part of bug #3145.
+
 2022-04-19 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* src/SDCCast.c:
